# bitalino_rs

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  README.md  clippy.toml  deny.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
bitalino_rs/: __init__.py  __init__.pyi  _bitalino_core.pyi  _core.pyi  device.py  device.pyi  logging.py  logging.pyi  models.py  models.pyi
development/: index.html
docs/: development.md  index.md  installation.md  python_api.md  rust_api.md
examples/: README.md  battery_and_state.py  logging_bridge.py  plot_realtime.py  quickstart_read.py  reconnect_on_failure.py  stream_to_csv.py  timed_batch_and_gaps.py
installation/: index.html
python_api/: index.html
rust-docs/: crates.js  help.html  settings.html  src-files.js
rust-docs/_core/: all.html  enum.BluetoothError.html  enum.DriverError.html  enum.SamplingRate.html  index.html  sidebar-items.js  struct.Bitalino.html  struct.BluetoothConnector.html  struct.DeviceState.html  struct.Frame.html  struct.FrameBatch.html  struct.RfcommStream.html  type.Result.html
rust-docs/_core/bitalino/: enum.SamplingRate.html  struct.Bitalino.html  struct.DeviceState.html  struct.Frame.html  struct.FrameBatch.html
rust-docs/_core/bluetooth/: struct.BluetoothConnector.html  struct.RfcommStream.html
rust-docs/_core/errors/: enum.BluetoothError.html  enum.DriverError.html  type.Result.html
rust-docs/bitalino_rs/: all.html  enum.BluetoothError.html  enum.DriverError.html  enum.SamplingRate.html  fn.init_python_logging.html  fn.init_rust_logging.html  fn.main.html  fn.reset_python_logging_cache.html  fn.run.html  index.html  sidebar-items.js  struct.Args.html  struct.Bitalino.html  struct.BluetoothConnector.html  struct.DeviceState.html  struct.Frame.html  struct.FrameBatch.html  struct.RfcommStream.html  type.Result.html
rust-docs/bitalino_rs/bitalino/: constant.BAUD_RATE.html  constant.CMD_IDLE.html  constant.CMD_PWM_PREFIX.html  constant.CMD_STATE.html  constant.CMD_STOP.html  constant.CMD_TRIGGER_1.html  constant.CMD_TRIGGER_2.html  constant.CMD_VERSION.html  constant.COMMAND_DELAY.html  constant.DEFAULT_TIMEOUT.html  constant.STOP_DELAY.html  constant.VERSION_TIMEOUT.html  enum.SamplingRate.html  index.html  sidebar-items.js  struct.Bitalino.html  struct.DeviceState.html  struct.Frame.html  struct.FrameBatch.html  trait.Transport.html
rust-docs/bitalino_rs/bluetooth/: constant.DEFAULT_IO_TIMEOUT_SECS.html  constant.MAX_CONNECT_RETRIES.html  constant.PAIR_TIMEOUT_SECS.html  constant.RETRY_DELAY_MS.html  constant.SCAN_TIMEOUT_SECS.html  fn.build_agent.html  fn.open_rfcomm.html  fn.wait_for_device.html  index.html  sidebar-items.js  struct.BluetoothConnector.html  struct.RfcommStream.html
rust-docs/bitalino_rs/errors/: enum.BluetoothError.html  enum.DriverError.html  index.html  sidebar-items.js  type.Result.html
rust-docs/bitalino_rs/logging/: fn.init_python_logging.html  fn.init_rust_logging.html  fn.reset_python_logging_cache.html
rust-docs/search.index/: 06a68c844915.js  0718567a49ed.js  07ac7d364f.js  07b389cf4c3b.js  094944ae05c4.js  09c1f237372e.js  09e84d3b11b1.js  0cbdbb8bcd97.js  123f6d866e41.js  137bc214cf87.js  13f5ef5e9b.js  16d060b4a430.js  18cd590cc318.js  1b14c7605050.js  1b9c0dacbbfa.js  1eac4029e27a.js  1eea7a37ce38.js  208b117026ba.js  20afbfb61aeb.js  21ed08cc6127.js  21f475c06c.js  22f7744809a9.js  24c40be48b37.js  283da53fe4cb.js  2d6facd5bb.js  3036ccccd098.js  359ac6377aa6.js  36cdd2561b6a.js  3b03bb6f3cb3.js  3c5830bcaf95.js  3c775c8ac040.js  3c95c0207005.js  3ca65b4a8061.js  3d68fa2c8a8e.js  435f2f0990aa.js  450e0dbd8c98.js  454cdc2861.js  492390247671.js  492621e600.js  4985d6643fdc.js  (+21 more)
rust-docs/search.index/crateNames/: b51c672deb37.js  d72d5713dec9.js
rust-docs/search.index/desc/: b62c1fcadbb9.js  ced4513c935e.js  d5f9deb7b32a.js
rust-docs/search.index/entry/: 1e6c752414a7.js  e0f719b6bf.js  fa50d67605b1.js
rust-docs/search.index/function/: 0085b7cebf09.js  be7b65a6ce65.js  eb70df609e.js
rust-docs/search.index/generic_inverted_index/: 790b08b5d348.js  df8f55abb2d5.js  fe58e9a11357.js
rust-docs/search.index/name/: 76cddbc992c1.js  901a09061c.js  a3c6f9093bb4.js
rust-docs/search.index/normalizedName/: 709978af1821.js  c3bcde7b46.js  fa1f28ad5030.js
rust-docs/search.index/path/: 96aab522740e.js  be2c2fb38655.js
rust-docs/search.index/type/: 5752a4275a62.js  aad9e4a1d820.js  b0cba4d6b1cd.js
rust-docs/src/_core/: bitalino.rs.html  bluetooth.rs.html  errors.rs.html  lib.rs.html
rust-docs/src/bitalino_rs/: bitalino.rs.html  bluetooth.rs.html  errors.rs.html  lib.rs.html  logging.rs.html  main.rs.html
rust-docs/static.files/SourceSerif4-LICENSE-a2cfd9d5/: index.html
rust-docs/trait.impl/bitalino_rs/bitalino/: trait.Transport.js
rust-docs/trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
rust-docs/trait.impl/core/clone/: trait.Clone.js
rust-docs/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
rust-docs/trait.impl/core/convert/: trait.From.js
rust-docs/trait.impl/core/default/: trait.Default.js
rust-docs/trait.impl/core/error/: trait.Error.js
rust-docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
rust-docs/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
rust-docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
rust-docs/trait.impl/std/io/: trait.Read.js  trait.Write.js
rust-docs/type.impl/core/result/: enum.Result.js
rust_api/: index.html
search/: search_index.json
src/: bitalino.rs  bluetooth.rs  errors.rs  lib.rs  logging.rs  main.rs
