[package]
name = "bitalino_rs"
version = "0.1.8"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[features]
default = ["manual-rfcomm"]
bluez = ["bluer", "tokio", "futures"]
manual-rfcomm = []

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
serialport = { version = "4.8.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "1.0"
libc = "0.2"
bluer = { version = "0.17.4", default-features = false, features = ["bluetoothd", "rfcomm"], optional = true }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"], optional = true }
futures = { version = "0.3", optional = true }
clap = { version = "4.5", features = ["derive"] }
