[package]
name = "bitalino_rs"
version = "0.3.3"
edition = "2021"
description = "BITalino Bluetooth/serial driver with Python bindings (PyO3, abi3)."
homepage = "https://github.com/tleygue/bitalino_rs"
repository = "https://github.com/tleygue/bitalino_rs"
documentation = "https://docs.rs/bitalino_rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["bitalino", "bluetooth", "pyo3", "abi3", "biosignal"]
categories = ["api-bindings", "science", "hardware-support"]
rust-version = "1.78"

[lib]
name = "bitalino_rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py39"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
serialport = { version = "4.8.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.103"
thiserror = "1.0"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
