[project]
name = "bitalino-rs"
version = "0.1.8"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "tleygue", email = "36546314+tleygue@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    {include-group = "docs"}
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]

[project.scripts]
bitalino-rs = "bitalino_rs:main"

[tool.maturin]
module-name = "bitalino_rs._core"
python-packages = ["bitalino_rs"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["maturin_template"]
extend-exclude = ["target"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "py311"
warn_unused_configs = true
exclude = ["^target/"]
mypy_path = ["bitalino_rs"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "uv"  # Use uv as the source of truth for the version
update_changelog_on_bump = false
major_version_zero = true
version_files = [
    "pyproject.toml:project.version",
    "Cargo.toml:^version",
    "Cargo.lock"
]
# Use a hook to update Cargo.lock and stage it
post_bump_hooks = [
    "cargo metadata --format-version 1 > /dev/null",
    "git add Cargo.lock"
]
